--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emailjs/browser": "^4.4.1",
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@mui/icons-material": "^6.4.4",
+        "@mui/material": "^6.4.4",
         "@tailwindcss/vite": "^4.0.0",
         "dotenv": "^16.4.7",
         "react": "^18.3.1",
