--- a/package.json
+++ b/package.json
@@ -4,23 +4,44 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "preview": "vite preview"
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint .",
+        "preview": "vite preview"
     },
     "dependencies": {
-      "@emailjs/browser": "^4.4.1",
-      "@mui/icons-material": "^6.4.4",
-      "@mui/material": "^6.4.4",
-      "react": "^18.3.1",
-      "react-dom": "^18.3.1",
-      "react-router-dom": "^7.1.3",
-      "tailwindcss": "^4.0.0"
+        "@emailjs/browser": "^4.4.1",
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@mui/icons-material": "^6.4.4",
+        "@mui/material": "^6.4.4",
+        "@tailwindcss/vite": "^4.0.0",
+        "dotenv": "^16.4.7",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-icons": "^5.4.0",
+        "react-router-dom": "^7.1.3",
+        "tailwindcss": "^4.0.0"
     },
     "devDependencies": {
-      "@vitejs/plugin-react": "^4.3.4",
-      "vite": "^6.0.5"
+        "@eslint/js": "^9.17.0",
+        "@types/react": "^18.3.18",
+        "@types/react-dom": "^18.3.5",
+        "@vitejs/plugin-react": "^4.3.4",
+        "eslint": "^9.17.0",
+        "eslint-plugin-react": "^7.37.2",
+        "eslint-plugin-react-hooks": "^5.0.0",
+        "eslint-plugin-react-refresh": "^0.4.16",
+        "globals": "^15.14.0",
+        "vite": "^6.0.5"
     },
+    "description": "portfolio built with React.",
+    "main": "eslint.config.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/asthapandey2026/Ansh_Chaurasiya.git"
+    },
+    "keywords": [],
+    "author": "",
     "license": "ISC"
-  }
-  
+}
